test/error/DynamicArrayLeakInit.ci
public static class Test
{
	public static bool Run()
	{
		// FIXME:
		int[] p = new int[3]; //ERROR: Dynamically allocated array must be assigned to a  reference
		return true;
	}
}
